index css changes

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -27,6 +27,8 @@ img{
     width: 60%;
     padding: 2rem;
     font-size: 20px;
+    border-radius: 30px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .upload-box{
